# base64

./: .gitignore  CMakeLists.txt  README.md  base64.h
impl/: adapters.h  buffers.h  decode.h  encode.h  encoding_traits.h  errors.h  make_adapter.h  make_buffer.h
tests/: CMakeLists.txt  def_encoding_test.cpp  helpers.h  test.cpp  traits_test.cpp  url_encoding_test.cpp
